solve canvas stretching problem and add improvement point notification

--- a/mystyle.css
+++ b/mystyle.css
@@ -3,7 +3,7 @@ html, body { height: 100%; padding: 0; margin: 0; min-height: 100% }
 /* main layout */
 
 #main {background: #DDD; min-height: 100%; height: 100%;}
-#leftDiv {background: #AAA; height: 100%; width: 65%; float: left;}
+#leftDiv { height: 100%; width: 65%; float: left;}
 #leftFirst {background: #BBB; height: 65%; width: 100%; float: left; box-sizing: border-box; }
 #bars {height:5%; width: 100%; float: left; border: 1px solid black;}
 #progressBar {height: 50%; width: 100%; float: left;border: 1px solid black; display: none;}
